# nonbloat-db

./: .cruft.json  .git-blame-ignore-revs  .readthedocs.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: commit_and_push.py  dependabot.yml
.github/workflows/: deploy-pypi.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/api/: reference.rst
docs/pages/: design_choices.rst  quick_start.rst
src/nbdb/: storage.py
tests/: in_memory.py  test_commit_and_push.py  test_storage.py
