[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "nonbloat-db"
description = "Simple key-value database for my small projects!"
version = "0.0.0" # version is handled by git tags and poetry-dynamic-versioning
license = "AGPL3"
authors = []
readme = "README.md"
packages = [
    { include = "nbdb", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"

typing-extensions = "*"
aiofile = "~3"


[tool.poetry.group.make.dependencies]
black = "~24"
isort = "~5.13"
pycln = "~2.4"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~4.0"


[tool.poetry.group.typing.dependencies]
mypy = "~1.13"


[tool.poetry.group.tests.dependencies]
pytest = "~8.3"
pytest-asyncio = "~0.24"
pytest-cov = "~6.0"
pytest-mock = "~3.14"
pytest-randomly = "~3.16"
Faker = "~33.1"


[tool.poetry.group.docs.dependencies]
sphinx = "~7.4"
sphinx-autobuild = "2024.10.3"
sphinx-autodoc-typehints = "~2.3"
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "24.2"
poetry-dynamic-versioning = "1.4.1"

# workarounds
setuptools = "75" # No module named 'pkg_resources'
docutils = ">=0.18.1,<0.21" # https://github.com/CrossNox/m2r2/issues/68


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.32"
GitPython = "~3.1"


[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"


[tool.poetry-dynamic-versioning]
bump = true
enable = true
style = "pep440"


[tool.black]
line-length = 120
target-version = ['py39']
